--- a/index.html
+++ b/index.html
@@ -3104,7 +3104,7 @@
     const SUPABASE_FUNCTIONS_URL = 'https://vqksytduqxpfcovijhko.functions.supabase.co';
     // Bump on every publish so we can sanity-check cache and whether we're on the latest build.
     // Format: vMAJOR.MINOR.PATCH+YYYYMMDD.N
-    const APP_VERSION = 'v0.7.21+20260208.1';
+    const APP_VERSION = 'v0.7.22+20260208.1';
     const LIKELIHOOD_THIS_Q = 'this_q';
     const LIKELIHOOD_NEXT_Q = 'next_q';
     const LIKELIHOOD_HELP = 'help_needed';
@@ -3945,7 +3945,7 @@
       const wl = details.stage_7_8 || [];
       (wl || []).forEach((rec) => {
         const stage = String(rec.stage || '').toLowerCase();
-        if (!stage.includes('win') && !stage.startsWith('7.')) return;
+        if (!stage.includes('win') && !stage.includes('won') && !stage.startsWith('7.')) return;
         const q = scorecardQuarterLabelForDate(rec.start_date);
         if (!q) return;
         const size = dealSizeValue(rec.deal_size);
