--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
 
     .funnel-shape-row {
       display: grid;
-      grid-template-columns: 42px 1fr 36px;
+      grid-template-columns: minmax(150px, 210px) 1fr 42px;
       align-items: center;
       gap: 6px;
       margin-bottom: 6px;
@@ -581,6 +581,9 @@
       font-size: 11px;
       color: #3f5477;
       font-weight: 700;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     .funnel-shape-track {
@@ -601,6 +604,12 @@
       color: #2e4266;
       text-align: right;
       font-variant-numeric: tabular-nums;
+    }
+
+    @media (max-width: 560px) {
+      .funnel-shape-row {
+        grid-template-columns: minmax(120px, 1fr) 1fr 38px;
+      }
     }
 
     .score-table {
@@ -3104,7 +3113,7 @@
     const SUPABASE_FUNCTIONS_URL = 'https://vqksytduqxpfcovijhko.functions.supabase.co';
     // Bump on every publish so we can sanity-check cache and whether we're on the latest build.
     // Format: vMAJOR.MINOR.PATCH+YYYYMMDD.N
-    const APP_VERSION = 'v0.7.22+20260208.1';
+    const APP_VERSION = 'v0.7.23+20260208.1';
     const LIKELIHOOD_THIS_Q = 'this_q';
     const LIKELIHOOD_NEXT_Q = 'next_q';
     const LIKELIHOOD_HELP = 'help_needed';
@@ -3410,6 +3419,28 @@
     function fmtDealSize(raw) {
       if (raw == null || raw === '') return '-';
       return moneyUsd.format(dealSizeValue(raw));
+    }
+
+    function bestDealSize(rec) {
+      if (!rec || typeof rec !== 'object') return null;
+      const keys = [
+        'deal_size',
+        'adj_deal_size',
+        'adjusted_deal_size',
+        'adjusted_contract_number',
+        'adjusted_contract_value',
+        'tcv',
+        'contract_value',
+        'value',
+      ];
+      for (const k of keys) {
+        if (Object.prototype.hasOwnProperty.call(rec, k)) {
+          const v = rec[k];
+          const n = dealSizeValue(v);
+          if (Number.isFinite(n) && n > 0) return n;
+        }
+      }
+      return rec.deal_size ?? null;
     }
 
     function fmtTs(ts) {
@@ -3981,7 +4012,7 @@
         tr.appendChild(makeCell('td', r.deal || '-'));
         tr.appendChild(makeCell('td', r.stage || '-'));
         tr.appendChild(makeCell('td', r.start_date || '-'));
-        tr.appendChild(makeCell('td', fmtDealSize(r.deal_size)));
+        tr.appendChild(makeCell('td', fmtDealSize(bestDealSize(r))));
         bodyEl.appendChild(tr);
       });
     }
@@ -5472,7 +5503,7 @@
           hr.appendChild(makeCell('th', 'Deal'));
           hr.appendChild(makeCell('th', 'Stage'));
           hr.appendChild(makeCell('th', 'Start Date'));
-          hr.appendChild(makeCell('th', 'Size'));
+          hr.appendChild(makeCell('th', 'Deal Size'));
           thead2.appendChild(hr);
           table2.appendChild(thead2);
           const body2 = document.createElement('tbody');
