--- a/index.html
+++ b/index.html
@@ -1176,6 +1176,7 @@
     .likelihood-table-wrap {
       border-top: 1px solid #e7edf7;
       background: #fcfdff;
+      overflow-x: auto;
     }
 
     .likelihood-mini-table {
@@ -1196,7 +1197,7 @@
     .likelihood-mini-table th {
       background: #f3f7ff;
       color: #274777;
-      font-size: 11px;
+      font-size: 10px;
       text-transform: uppercase;
       letter-spacing: 0.2px;
     }
@@ -1236,6 +1237,12 @@
       white-space: normal;
       word-break: break-word;
       line-height: 1.2;
+    }
+
+    /* Override the nowrap from nth-child rules (keep cells nowrap, allow headers to wrap). */
+    .likelihood-mini-table th:nth-child(3),
+    .likelihood-mini-table th:nth-child(4) {
+      white-space: normal;
     }
 
     .target-controls {
@@ -3127,7 +3134,7 @@
     const SUPABASE_FUNCTIONS_URL = 'https://vqksytduqxpfcovijhko.functions.supabase.co';
     // Bump on every publish so we can sanity-check cache and whether we're on the latest build.
     // Format: vMAJOR.MINOR.PATCH+YYYYMMDD.N
-    const APP_VERSION = 'v0.7.25+20260208.1';
+    const APP_VERSION = 'v0.7.26+20260208.1';
     const LIKELIHOOD_THIS_Q = 'this_q';
     const LIKELIHOOD_NEXT_Q = 'next_q';
     const LIKELIHOOD_HELP = 'help_needed';
