--- a/index.html
+++ b/index.html
@@ -1182,9 +1182,10 @@
     .likelihood-mini-table {
       width: 100%;
       border-collapse: collapse;
-      table-layout: fixed;
+      table-layout: auto;
       font-size: 12px;
       color: #1e345a;
+      min-width: 520px;
     }
 
     .likelihood-mini-table th, .likelihood-mini-table td {
@@ -3134,7 +3135,7 @@
     const SUPABASE_FUNCTIONS_URL = 'https://vqksytduqxpfcovijhko.functions.supabase.co';
     // Bump on every publish so we can sanity-check cache and whether we're on the latest build.
     // Format: vMAJOR.MINOR.PATCH+YYYYMMDD.N
-    const APP_VERSION = 'v0.7.26+20260208.1';
+    const APP_VERSION = 'v0.7.27+20260208.1';
     const LIKELIHOOD_THIS_Q = 'this_q';
     const LIKELIHOOD_NEXT_Q = 'next_q';
     const LIKELIHOOD_HELP = 'help_needed';
