--- a/index.html
+++ b/index.html
@@ -3150,7 +3150,7 @@
     const SUPABASE_FUNCTIONS_URL = 'https://vqksytduqxpfcovijhko.functions.supabase.co';
     // Bump on every publish so we can sanity-check cache and whether we're on the latest build.
     // Format: vMAJOR.MINOR.PATCH+YYYYMMDD.N
-    const APP_VERSION = 'v0.7.29+20260209.1';
+    const APP_VERSION = 'v0.7.30+20260209.1';
     const LIKELIHOOD_THIS_Q = 'this_q';
     const LIKELIHOOD_NEXT_Q = 'next_q';
     const LIKELIHOOD_HELP = 'help_needed';
@@ -3411,7 +3411,7 @@
         if (open) setTimeout(() => input.focus(), 40);
       };
 
-      const ask = () => {
+      async function ask() {
         const q = input.value.trim();
         if (!q) return;
         chatAppend('user', q);
@@ -3421,9 +3421,15 @@
           input.value = '';
           return;
         }
-        chatAppend('assistant', chatAnswer(q, dataNow));
+        const pending = chatAppend('assistant', 'Thinking…');
+        try {
+          const ans = await chatAskLlm(q);
+          pending.textContent = ans;
+        } catch (e) {
+          pending.textContent = `${chatAnswer(q, dataNow)}\n\n[LLM unavailable: ${e && e.message ? e.message : 'failed'}]`;
+        }
         input.value = '';
-      };
+      }
 
       fab.addEventListener('click', () => toggle(!panel.classList.contains('open')));
       close.addEventListener('click', () => toggle(false));
@@ -3451,6 +3457,35 @@
       });
 
       chatAppend('assistant', 'Ask me about stage counts, deal lists, stuck deals, funnel snapshot, intro trend, or won/lost sources.');
+    }
+
+    async function chatAskLlm(question) {
+      if (!currentUser || !sessionPassword) throw new Error('Not logged in');
+      const url = `${SUPABASE_URL}/functions/v1/chat-analyst`;
+      const payload = {
+        username: currentUser.username,
+        password: sessionPassword,
+        question,
+        // If the user is viewing a historical version, answer from that snapshot.
+        version_id: viewedVersionIdState || null,
+      };
+      const res = await fetch(url, {
+        method: 'POST',
+        headers: {
+          'content-type': 'application/json',
+          apikey: SUPABASE_ANON_KEY,
+          Authorization: `Bearer ${SUPABASE_ANON_KEY}`,
+        },
+        body: JSON.stringify(payload),
+      });
+      const out = await res.json().catch(() => ({}));
+      if (!res.ok || !out || out.ok !== true) {
+        const msg = out && out.error ? String(out.error) : `HTTP ${res.status}`;
+        throw new Error(msg);
+      }
+      const model = out.model ? ` (${out.model})` : '';
+      const v = out.version_id ? ` [v=${String(out.version_id).slice(0, 8)}]` : '';
+      return `${String(out.answer || '').trim() || '(no answer)'}${model}${v}`;
     }
 
     function dealSizeValue(raw) {
